# jobsresearch

./: .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  Makefile  README.rst  pyproject.toml  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: appli.yml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
src/jobsreasearch/: __init__.py
tests/: __init__.py  test_jobsreasearch.py
