[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jobsreasearch"
version = "0.1.0"
description = "Python Boilerplate contains all the boilerplate you need to create a Python package."
readme = "README.rst"
authors = [
  {name = "ikram zouaoui", email = "ikramzouaoui95@gmail.com"}
]
maintainers = [
  {name = "ikram zouaoui", email = "ikramzouaoui95@gmail.com"}
]
classifiers = [

]
license = {text = "Not open source"}
dependencies = [
  
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/ikrzm/jobsreasearch/issues"
changelog = "https://github.com/ikrzm/jobsreasearch/blob/master/changelog.md"
homepage = "https://github.com/ikrzm/jobsreasearch"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

