[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jobsresearch"
description = "A Python project for job research."
authors = [
  {name = "Ikram Zouaoui", email = "ikramzouaoui95@gmail.com"}
]
requires-python = ">=3.9"
dynamic = ["version"]
dependencies = [
  "pandas>=1.3.0",     #
  "numpy>=1.21.0"      
]

[project.optional-dependencies]
dev = [
  "ruff",               # Linter for Python
  "pytest>=7.0.0",      # For running tests
  "black>=22.0.0",      # Code formatter
  "mypy>=0.910"         # Static type checker
]
setup = [
  "wheel",
  "setuptools"
]

[tool.setuptools.dynamic]
version = {attr = "jobsresearch.__version__"}
