[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jobsresearch"
description = "A Python project for job research."
authors = [
  {name = "Ikram Zouaoui", email = "ikramzouaoui95@gmail.com"}
]
requires-python = ">=3.9"
dynamic = ["version"]
dependencies = [
  "requests>=2.26.0",
  "pandas>=1.3.0",
  "numpy>=1.21.0"
]

[project.optional-dependencies]
dev = [
  "ruff",
  "pytest>=7.0.0",
  "black>=22.0.0",
  "mypy>=0.910"
]
setup = [
  "wheel",
  "setuptools"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "jobsresearch.__version__"}
